# Cloud-Optimizer-OpenEnv

./: Dockerfile  Makefile  README.md  __init__.py  app.py  client.py  data.json  environment.py  inference.py  metadata.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_my_env.py
cloud_server/: app.py  cloud_server_environment.py
cloud_server_new/: __init__.py  app.py  cloud_server_environment.py
server/: app.py
