[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-optimizer-cracking"
version = "0.1.0"
description = "Cloud infrastructure scaling environment for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "numpy"
]
